--- a/CassetteCompiler/CassetteCompiler/Views/User/Login.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/User/Login.cshtml
@@ -17,14 +17,14 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Register">Register</a>
 </div>
 
 @section Scripts {
