--- a/CassetteCompiler/CassetteCompiler/Views/Shared/_Layout.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -21,6 +22,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item ml-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">
+                                    Logout @User.FindFirst(ClaimTypes.Email).Value
+                                </a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
