--- a/CassetteCompiler/CassetteCompiler/Views/Cassette/Create.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/Cassette/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Add A Cassette</h1>
 
-<h4>Cassette</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,7 +32,7 @@
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add To Collection" class="btn btn-primary" />
             </div>
         </form>
     </div>
