--- a/CassetteCompiler/CassetteCompiler/Views/Cassette/Create.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/Cassette/Create.cshtml
@@ -13,21 +13,21 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Artist" class="control-label"></label>
-                <input asp-for="Artist" class="form-control" />
+                <input asp-for="Artist" Required class="form-control" />
                 <span asp-validation-for="Artist" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Album" class="control-label"></label>
-                <input asp-for="Album" class="form-control" />
+                <input asp-for="Album" Required class="form-control" />
                 <span asp-validation-for="Album" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Year" class="control-label"></label>
-                <input asp-for="Year" class="form-control" />
+                <label asp-for="Year" class="control-label">Year (Leave 0 if unknown)</label>
+                <input asp-for="Year" value="0" class="form-control" />
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Notes" class="control-label"></label>
+                <label asp-for="Notes" class="control-label">Notes (Optional)</label>
                 <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
