--- a/CassetteCompiler/CassetteCompiler/Views/Cassette/Details.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/Cassette/Details.cshtml
@@ -4,36 +4,11 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@Model.Artist - @Model.Album</h1>
 
 <div>
-    <h4>Cassette</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Artist)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Artist)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Album)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Album)
-        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Year)
         </dt>
@@ -47,14 +22,14 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayFor(model => model.Genres)
+            Genre(s)
         </dt>
         <dd class="col-sm-10">
-            <ul>
+            <ul class="list-group mt-4">
                 @{
                     foreach (Genre g in Model.Genres)
                     {
-                        <li>
+                        <li class="list-group-item disabled" aria-disabled="true">
                             @g.Name
                         </li>
                     }
