--- a/CassetteCompiler/CassetteCompiler/Views/Cassette/Create.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/Cassette/Create.cshtml
@@ -33,12 +33,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cassette.Genres" class="control-label"></label>
-                <select multiple asp-for="Cassette.Genres" class="form-control">
-                    <option>Select Genre(s)</option>
+                <select multiple asp-for="GenreIds" class="form-control">
+                    <option asp-for="@Model.GenreIds">Select Genre(s)</option>
                     @{
                         foreach(Genre g in Model.Genres)
                         {
-                            <option value="@g.Id">@g.Name</option>
+                            <option asp-for="@Model.GenreIds" value="@g.Id">@g.Name</option>
                         }
                     }
                 </select>
