--- a/CassetteCompiler/CassetteCompiler/Views/Shared/_Layout.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Cassette Compiler</title>
+    <link rel="icon" href="@Url.Content("~/favicon-32x32.png")"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
