added logo to header

--- a/CassetteCompiler/CassetteCompiler/Views/User/Login.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/User/Login.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Login";
 }
 
+<img class="" src="Content/Images/logoNoText.png" height="150px" />
+
 <h1>Login</h1>
 
 <hr />
