--- a/CassetteCompiler/CassetteCompiler/Views/User/Login.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/User/Login.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Login";
 }
 
-<img class="" src="Content/Images/logoNoText.png" height="150px" />
+<img class="mx-auto d-block" src="Content/Images/logoNoText.png" height="150px" />
 
 <h1>Login</h1>
 
