added logo to register page

--- a/CassetteCompiler/CassetteCompiler/Views/User/Register.cshtml
+++ b/CassetteCompiler/CassetteCompiler/Views/User/Register.cshtml
@@ -4,9 +4,10 @@
     ViewData["Title"] = "Register";
 }
 
+<img class="mx-auto d-block" src="~/Content/Images/logoNoText.png" height="150px" />
+
 <h1>Register</h1>
 
-<h4>User</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
